--- a/exercise 5.ipynb
+++ b/exercise 5.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "2882e17f",
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "id": "ae9ac563",
    "metadata": {},
    "outputs": [
     {
@@ -31,6 +33,7 @@
      "output_type": "stream",
      "text": [
       "Enter colours : red,green,yellow\n",
+      "The list of colours :  ['red', 'green', 'yellow']\n",
       "First colour =  red\n",
       "Last colour =  yellow\n"
      ]
@@ -40,13 +43,15 @@
     "#program to create a list of colours from comma-seperated colour names entered by user and display first and last colou\n",
     "a=input(\"Enter colours : \")\n",
     "l=a.split(\",\")\n",
+    "print(\"The list of colours : \",l)\n",
     "print(\"First colour = \",l[0])\n",
     "print(\"Last colour = \",l[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "id": "04ecb1f4",
    "metadata": {},
    "outputs": [
     {
@@ -68,9 +73,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "3f6dd67f",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -91,9 +95,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
